--- a/default.env
+++ b/default.env
@@ -4,11 +4,15 @@ ETH_NETWORK=--goerli
 LH_TESTNET=medalla
 # ETH1 endpoint for Lighthouse. This default uses the geth container
 LH_ETH1_NODE=http://geth:8545
+# ETH1 endpoint for Prysm. This default uses the geth container
+PRYSM_ETH1_NODE=http://geth:8545
 
 # Ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 GETH_PORT=30303
 LH_PORT=9000
+PRYSM_PORT=13000
+PRYSM_UDP_PORT=12000
 
 # These variables are not likely to require adjustment
 GETH_BUILD_TARGET=release/1.9
@@ -16,8 +20,12 @@ GETH_USER=geth
 GETH_UID=10001
 GETH_ENTRYPOINT=geth --nousb --http --http.addr 0.0.0.0 --http.vhosts * --http.api eth,net --ipcdisable --datadir /var/lib/goethereum
 
-
 LH_BUILD_TARGET=master
 LH_USER=lighthouse
 LH_UID=10001
 LH_ENTRYPOINT=lighthouse bn --datadir /var/lib/lighthouse/ --http --http-address 0.0.0.0
+
+PRYSM_BUILD_TARGET=master
+PRYSM_USER=prysm
+PRYSM_UID=10001
+PRYSM_ENTRYPOINT=beacon-chain --datadir /var/lib/prysm/ --rpc-host 0.0.0.0
