First stab at wallet creation and deposit files

--- a/default.env
+++ b/default.env
@@ -1,3 +1,12 @@
+# This should be the UID if the logged-in user, which you can get with `echo $UID`
+# That allows the eth2.0-deposit-cli to write to the .eth2 directory in this folder
+DEPCLI_UID=1000
+# Graffiti to use for validator, in order to receive POAP
+GRAFFITI=placeholder
+# Number of validators
+NUMVAL=1
+# Chain to use for wallet creation and initial deposit
+DEPOSIT_CHAIN=medalla
 # Network to use for eth1. Comment out if not using the goerli testnet.
 ETH_NETWORK=--goerli
 # Testnet to use for eth2. Comment out if not using a testnet.
@@ -22,10 +31,18 @@ GETH_ENTRYPOINT=geth --nousb --http --http.addr 0.0.0.0 --http.vhosts * --http.a
 
 LH_BUILD_TARGET=master
 LH_USER=lighthouse
-LH_UID=10001
-LH_ENTRYPOINT=lighthouse bn --datadir /var/lib/lighthouse/ --http --http-address 0.0.0.0
+LH_UID=10002
+LH_BN_ENTRYPOINT=lighthouse bn --datadir /var/lib/lighthouse --http --http-address 0.0.0.0
+LH_VAL_ENTRYPOINT=lighthouse --datadir /var/lib/lighthouse
 
 PRYSM_BUILD_TARGET=master
 PRYSM_USER=prysm
-PRYSM_UID=10001
-PRYSM_ENTRYPOINT=beacon-chain --datadir /var/lib/prysm/ --rpc-host 0.0.0.0
+PRYSM_UID=10003
+#PRYSM_BN_ENTRYPOINT=beacon-chain --datadir /var/lib/prysm/ --rpc-host 0.0.0.0
+PRYSM_BN_ENTRYPOINT=start-prysm-beacon-extip.sh
+PRYSM_VAL_ENTRYPOINT=validator --datadir /var/lib/prysm --wallet-dir /var/lib/prysm/
+PRYSM_VAL_IMPORT_ENTRYPOINT=create-prysm-validator-wallet.sh
+
+DEPCLI_USER=depcli
+DEPCLI_ENTRYPOINT=./deposit.sh --folder /var/lib/depcli
+DEPCLI_LOCALDIR=./.eth2
