Further readability of README

--- a/eth2.0-deposit-cli/Dockerfile
+++ b/eth2.0-deposit-cli/Dockerfile
@@ -1,26 +1,12 @@
 from python:buster
 
-ARG USER
-ARG UID
+RUN mkdir -p /var/lib/depcli
 
-RUN adduser \
-    --disabled-password \
-    --gecos "" \
-    --shell "/bin/bash" \
-    --uid "${UID}" \
-    "${USER}" 
-
-RUN mkdir -p /var/lib/depcli && chown ${USER}:${USER} /var/lib/depcli
-
-USER ${USER}:${USER}
-RUN cd ~ && git clone https://github.com/ethereum/eth2.0-deposit-cli.git
-USER root
-RUN cd /home/${USER}/eth2.0-deposit-cli && pip3 install -r requirements.txt && python3 setup.py install
-
-USER ${USER}:${USER}
+WORKDIR /root
+RUN git clone https://github.com/ethereum/eth2.0-deposit-cli.git && cd eth2.0-deposit-cli && pip3 install -r requirements.txt && python3 setup.py install
 
 ENV numvals 1
 ENV chain medalla
-WORKDIR /home/${USER}/eth2.0-deposit-cli
 
+WORKDIR /root/eth2.0-deposit-cli
 ENTRYPOINT ./deposit.sh --folder /var/lib/depcli --num_validators $numvals --chain $chain 
