--- a/default.env
+++ b/default.env
@@ -4,7 +4,7 @@ GRAFFITI=placeholder
 NUMVAL=1
 # Chain to use for wallet creation and initial deposit
 DEPOSIT_CHAIN=medalla
-# Network to use for eth1. Comment out if not using the goerli testnet.
+# Network to use for geth. Comment out if not using the goerli testnet.
 ETH_NETWORK=--goerli
 # Testnet to use for eth2. Comment out if not using a testnet.
 LH_TESTNET=medalla
