--- a/default.env
+++ b/default.env
@@ -3,11 +3,11 @@ GRAFFITI=placeholder
 # Number of validators
 NUMVAL=1
 # Chain to use for wallet creation and initial deposit
-DEPOSIT_CHAIN=medalla
+DEPOSIT_CHAIN=spadina
 # Network to use for geth. Comment out if not using the goerli testnet.
 ETH_NETWORK=--goerli
 # Testnet to use for eth2. Comment out if not using a testnet.
-LH_TESTNET=medalla
+LH_TESTNET=spadina
 # ETH1 endpoint for Lighthouse. This default uses the geth container
 LH_ETH1_NODE=http://geth:8545
 # ETH1 endpoint for Prysm. This default uses the geth container
@@ -40,5 +40,6 @@ PRYSM_BN_ENTRYPOINT=start-prysm-beacon-extip.sh
 PRYSM_VAL_ENTRYPOINT=validator --datadir /var/lib/prysm --wallet-dir /var/lib/prysm/
 PRYSM_VAL_IMPORT_ENTRYPOINT=create-prysm-validator-wallet.sh
 
+DEPCLI_BUILD_TARGET=dev
 DEPCLI_ENTRYPOINT=./deposit.sh --folder /var/lib/depcli
 DEPCLI_LOCALDIR=./.eth2
