--- a/eth2.0-deposit-cli/Dockerfile
+++ b/eth2.0-deposit-cli/Dockerfile
@@ -1,9 +1,11 @@
 from python:buster
 
+ARG BUILD_TARGET
+
 RUN mkdir -p /var/lib/depcli
 
 WORKDIR /root
-RUN git clone https://github.com/ethereum/eth2.0-deposit-cli.git && cd eth2.0-deposit-cli && pip3 install -r requirements.txt && python3 setup.py install
+RUN git clone https://github.com/ethereum/eth2.0-deposit-cli.git && cd eth2.0-deposit-cli && git checkout ${BUILD_TARGET} && pip3 install -r requirements.txt && python3 setup.py install
 
 ENV numvals 1
 ENV chain medalla
