--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,58 +20,79 @@ services:
     entrypoint: ${GETH_ENTRYPOINT}
     command:
       - ${ETH_NETWORK}
-  lh-beacon:
+  prysm-beacon:
     restart: "on-failure"
-    user: ${LH_UID}:${LH_UID}
+    user: ${PRYSM_UID}:${PRYSM_UID}
     build:
-      context: ./lighthouse
+      context: ./prysm
       args:
-        - BUILD_TARGET=${LH_BUILD_TARGET}
-        - USER=${LH_USER}
-        - UID=${LH_UID}
-    image: lighthouse
+        - BUILD_TARGET=${PRYSM_BUILD_TARGET}
+        - USER=${PRYSM_USER}
+        - UID=${PRYSM_UID}
+    image: prysm
     volumes:
-      - lhbeacon-data:/var/lib/lighthouse
+      - prysmbeacon-data:/var/lib/prysm
     ports:
-      - ${LH_PORT}:9000/tcp
-      - ${LH_PORT}:9000/udp
+      - ${PRYSM_PORT}:13000/tcp
+      - ${PRYSM_UDP_PORT}:12000/udp
     expose:
-      - 5052
-    entrypoint: ${LH_BN_ENTRYPOINT}
+      - 4000
+    entrypoint: ${PRYSM_BN_ENTRYPOINT}
     command:
-      - --testnet
-      - ${LH_TESTNET}
-      - --eth1-endpoint
-      - ${LH_ETH1_NODE}
-  lh-validator:
+      - beacon-chain
+      - --datadir
+      - /var/lib/prysm/
+      - --rpc-host 0.0.0.0
+      - --p2p-host-ip
+      - $$ClientIP
+      - --http-web3provider
+      - ${PRYSM_ETH1_NODE}
+      - --spadina
+  prysm-validator:
     restart: "on-failure"
-    user: ${LH_UID}:${LH_UID}
+    user: ${PRYSM_UID}:${PRYSM_UID}
     build:
-      context: ./lighthouse
+      context: ./prysm
       args:
-        - BUILD_TARGET=${LH_BUILD_TARGET}
-        - USER=${LH_USER}
-        - UID=${LH_UID}
-    image: lighthouse
+        - BUILD_TARGET=${PRYSM_BUILD_TARGET}
+        - USER=${PRYSM_USER}
+        - UID=${PRYSM_UID}
+    image: prysm
     volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-    entrypoint: ${LH_VAL_ENTRYPOINT}
-    command: ["validator", "--server", "http://lh-beacon:5052"]
-  lh-validator-import:
+      - prysmvalidator-data:/var/lib/prysm
+    entrypoint: ${PRYSM_VAL_ENTRYPOINT}
+    command: 
+      - --beacon-rpc-provider
+      - prysm-beacon:4000
+      - --graffiti
+      - ${GRAFFITI}
+      # If you chose not to store the wallet password during import, comment out the two following lines
+      - --wallet-password-file
+      - /var/lib/prysm/password.txt
+  prysm-validator-import:
     restart: "no"
-    user: ${LH_UID}:${LH_UID}
-    image: lighthouse
+    user: ${PRYSM_UID}:${PRYSM_UID}
+    image: prysm
     build:
-      context: ./lighthouse
+      context: ./prysm
       args:
-        - BUILD_TARGET=${LH_BUILD_TARGET}
-        - USER=${LH_USER}
-        - UID=${LH_UID}
+        - BUILD_TARGET=${PRYSM_BUILD_TARGET}
+        - USER=${PRYSM_USER}
+        - UID=${PRYSM_UID}
     volumes:
-      - lhvalidator-data:/var/lib/lighthouse
-      - ${DEPCLI_LOCALDIR}/validator_keys:/var/lib/lighthouse/validator_keys
-    entrypoint: ${LH_VAL_ENTRYPOINT}
-    command: ["account", "validator", "import", "--directory", "/var/lib/lighthouse/validator_keys", "--validator-dir", "/var/lib/lighthouse"]
+      - prysmvalidator-data:/var/lib/prysm
+      - ${DEPCLI_LOCALDIR}/validator_keys:/var/lib/prysm/validator_keys
+    entrypoint: ${PRYSM_VAL_IMPORT_ENTRYPOINT}
+    command:
+      - validator
+      - --datadir
+      - /var/lib/prysm
+      - --wallet-dir
+      - /var/lib/prysm/
+      - accounts-v2
+      - import
+      - --keys-dir
+      - /var/lib/prysm/validator_keys
   deposit-cli:
     restart: "no"
     build:
@@ -92,15 +113,15 @@ services:
     restart: "no"
     depends_on:
       - geth
-      - lh-beacon
-      - lh-validator
+      - prysm-beacon
+      - prysm-validator
   eth2-3rd:
     image: tianon/true
     restart: "no"
     depends_on:
-      - lh-beacon
-      - lh-validator
+      - prysm-beacon
+      - prysm-validator
 volumes:
   geth-data:
-  lhbeacon-data:
-  lhvalidator-data:
+  prysmbeacon-data:
+  prysmvalidator-data:
