--- a/clients/prysm.yml
+++ b/clients/prysm.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   geth:
-    restart: "on-failure"
+    restart: "no"
     user: ${GETH_UID}:${GETH_UID}      
     build:
       context: ./geth
@@ -21,7 +21,7 @@ services:
     command:
       - ${ETH_NETWORK}
   prysm-beacon:
-    restart: "on-failure"
+    restart: "no"
     user: ${PRYSM_UID}:${PRYSM_UID}
     build:
       context: ./prysm
@@ -49,7 +49,7 @@ services:
       - ${PRYSM_ETH1_NODE}
       - --spadina
   prysm-validator:
-    restart: "on-failure"
+    restart: "no"
     user: ${PRYSM_UID}:${PRYSM_UID}
     build:
       context: ./prysm
