Modular docker-compose, improved instructions

--- a/default.env
+++ b/default.env
@@ -1,20 +1,20 @@
 # Please adjust the below variable to your local user ID if you are on Linux.
 # This is vital for key import to work. You can find your UID with "echo $UID".
 LOCAL_UID=1000
+# Client choice: See SETUP.md for available options
+COMPOSE_FILE=lh-base.yml:lh-geth.yml
+# ETH1 endpoint / chain source. This default uses the geth container
+ETH1_NODE=http://geth:8545
 # Graffiti to use for validator, in order to receive POAP
-GRAFFITI=placeholder
+GRAFFITI=eth2-docker
 # Number of validators
 NUMVAL=1
-# ETH1 endpoint for Lighthouse. This default uses the geth container
-LH_ETH1_NODE=http://geth:8545
-# ETH1 endpoint for Prysm. This default uses the geth container
-PRYSM_ETH1_NODE=http://geth:8545
 # Chain to use for wallet creation and initial deposit
 DEPOSIT_CHAIN=medalla
 # Network to use for geth. Comment out if not using the goerli testnet.
 ETH_NETWORK=--goerli
 # Testnet to use for eth2. Comment out if not using a testnet.
-LH_TESTNET=medalla
+TESTNET=medalla
 
 # Ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
