--- a/lh-base.yml
+++ b/lh-base.yml
@@ -1,26 +1,6 @@
 version: "3"
 services:
-  geth:
-    restart: "no"
-    user: ${LOCAL_UID}:${LOCAL_UID}      
-    build:
-      context: ./geth
-      args:
-        - BUILD_TARGET=${GETH_BUILD_TARGET} 
-        - USER=${GETH_USER}
-        - UID=${LOCAL_UID}
-    image: geth
-    volumes:
-      - geth-data:/var/lib/goethereum
-    ports:
-      - ${GETH_PORT}:30303/tcp
-      - ${GETH_PORT}:30303/udp
-    expose:
-      - 8545
-    entrypoint: ${GETH_ENTRYPOINT}
-    command:
-      - ${ETH_NETWORK}
-  lh-beacon:
+  beacon:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
     build:
@@ -37,13 +17,13 @@ services:
       - ${LH_PORT}:9000/udp
     expose:
       - 5052
-    entrypoint: wait-for-eth1.sh ${LH_ETH1_NODE} ${LH_BN_ENTRYPOINT}
+    entrypoint: wait-for-eth1.sh ${ETH1_NODE} ${LH_BN_ENTRYPOINT}
     command:
       - --testnet
-      - ${LH_TESTNET}
+      - ${TESTNET}
       - --eth1-endpoint
-      - ${LH_ETH1_NODE}
-  lh-validator:
+      - ${ETH1_NODE}
+  validator:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
     build:
@@ -56,10 +36,10 @@ services:
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
     entrypoint: ${LH_VAL_ENTRYPOINT}
-    command: ["validator", "--server", "http://lh-beacon:5052", "--graffiti", "${GRAFFITI}"]
+    command: ["validator", "--server", "http://beacon:5052", "--graffiti", "${GRAFFITI}"]
     depends_on:
-      - lh-beacon
-  lh-validator-import:
+      - beacon
+  validator-import:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
     image: lighthouse
@@ -96,16 +76,8 @@ services:
     image: tianon/true
     restart: "no"
     depends_on:
-      - geth
-      - lh-beacon
-      - lh-validator
-  eth2-3rd:
-    image: tianon/true
-    restart: "no"
-    depends_on:
-      - lh-beacon
-      - lh-validator
+      - beacon
+      - validator
 volumes:
-  geth-data:
   lhbeacon-data:
   lhvalidator-data:
