--- a/prysm-base.yml
+++ b/prysm-base.yml
@@ -1,26 +1,6 @@
 version: "3"
 services:
-  geth:
-    restart: "no"
-    user: ${LOCAL_UID}:${LOCAL_UID}
-    build:
-      context: ./geth
-      args:
-        - BUILD_TARGET=${GETH_BUILD_TARGET} 
-        - USER=${GETH_USER}
-        - UID=${LOCAL_UID}
-    image: geth
-    volumes:
-      - geth-data:/var/lib/goethereum
-    ports:
-      - ${GETH_PORT}:30303/tcp
-      - ${GETH_PORT}:30303/udp
-    expose:
-      - 8545
-    entrypoint: ${GETH_ENTRYPOINT}
-    command:
-      - ${ETH_NETWORK}
-  prysm-beacon:
+  beacon:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
     build:
@@ -46,8 +26,8 @@ services:
       - --p2p-host-ip
       - $$ClientIP
       - --http-web3provider
-      - ${PRYSM_ETH1_NODE}
-  prysm-validator:
+      - ${ETH1_NODE}
+  validator:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
     build:
@@ -62,15 +42,15 @@ services:
     entrypoint: ${PRYSM_VAL_ENTRYPOINT}
     command: 
       - --beacon-rpc-provider
-      - prysm-beacon:4000
+      - beacon:4000
       - --graffiti
       - ${GRAFFITI}
       # If you chose not to store the wallet password during import, comment out the two following lines
       - --wallet-password-file
       - /var/lib/prysm/password.txt
     depends_on:
-      - prysm-beacon
-  prysm-validator-import:
+      - beacon
+  validator-import:
     restart: "no"
     user: ${LOCAL_UID}:${LOCAL_UID}
     image: prysm
@@ -116,16 +96,8 @@ services:
     image: tianon/true
     restart: "no"
     depends_on:
-      - geth
-      - prysm-beacon
-      - prysm-validator
-  eth2-3rd:
-    image: tianon/true
-    restart: "no"
-    depends_on:
-      - prysm-beacon
-      - prysm-validator
+      - beacon
+      - validator
 volumes:
-  geth-data:
   prysmbeacon-data:
   prysmvalidator-data:
