--- a/default.env
+++ b/default.env
@@ -2,7 +2,7 @@
 # This is vital for key import to work. You can find your UID with "echo $UID".
 LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
-COMPOSE_FILE=lh-base.yml:lh-geth.yml
+COMPOSE_FILE=lh-base.yml:geth.yml
 # ETH1 endpoint / chain source. This default uses the geth container
 ETH1_NODE=http://geth:8545
 # Graffiti to use for validator, in order to receive POAP
