--- a/prysm/Dockerfile
+++ b/prysm/Dockerfile
@@ -14,7 +14,7 @@ FROM debian:buster
 ARG USER
 ARG UID
 
-RUN apt-get update && apt-get install -y ca-certificates curl
+RUN apt-get update && apt-get install -y ca-certificates curl wget
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -26,12 +26,19 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
+# Grab dockerize so validator can wait for beacon
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
 # Copy executable
 COPY --from=builder /go/src/prysm/bazel-bin/beacon-chain/linux_amd64_stripped/beacon-chain /usr/local/bin/
 COPY --from=builder /go/src/prysm/bazel-bin/validator/linux_amd64_stripped/validator /usr/local/bin/
 COPY --from=builder /go/src/prysm/bazel-bin/slasher/linux_amd64_stripped/slasher /usr/local/bin/
 COPY ./start-prysm-beacon-extip.sh /usr/local/bin
 COPY ./create-prysm-validator-wallet.sh /usr/local/bin
+COPY ./wait-for-beacon.sh /usr/local/bin
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm
 
