--- a/default.env
+++ b/default.env
@@ -15,6 +15,8 @@ DEPOSIT_CHAIN=medalla
 ETH_NETWORK=--goerli
 # Testnet to use for eth2.
 TESTNET=medalla
+# If you want debug logs, set this to debug instead of info
+LOG_LEVEL=info
 
 # Ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
