Add support for nimbus client

--- a/prometheus/Dockerfile
+++ b/prometheus/Dockerfile
@@ -2,6 +2,8 @@ FROM prom/prometheus
 
 COPY ./lh-prom.yml /etc/prometheus
 COPY ./prysm-prom.yml /etc/prometheus
+COPY ./nimbus-prom.yml /etc/prometheus
+COPY ./prometheus.yml /etc/prometheus
 COPY ./choose-config.sh /usr/local/bin/choose-config.sh
 
 # For reference and local testing with docker; this is otherwise set by docker-compose
