Renamed nim-grafana to nimbus-grafana

--- a/default.env
+++ b/default.env
@@ -7,7 +7,7 @@ COMPOSE_FILE=lh-base.yml:geth.yml:grafana.yml
 ETH1_NODE=http://geth:8545
 # Graffiti to use for validator, in order to receive POAP
 GRAFFITI=eth2-docker
-# Number of validators
+# Number of validators to create with deposit-cli
 NUMVAL=1
 # Chain to use for wallet creation and initial deposit
 DEPOSIT_CHAIN=medalla
