Added teku client support

--- a/default.env
+++ b/default.env
@@ -20,6 +20,8 @@ LOG_LEVEL=info
 # Leave this as-is to compile nimbus with support for metrics via grafana. 
 # Change to empty (nothing after first =) to disable that functionality
 NIM_METRICS=NIMFLAGS="-d:insecure"
+# Uncomment this if you need to restrict teku to just 4 GiB of RAM
+#TEKU_LOW_MEM=-Xmx4G
 
 # Ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
@@ -27,8 +29,10 @@ GETH_PORT=30303
 LH_PORT=9000
 PRYSM_PORT=13000
 PRYSM_UDP_PORT=12000
-GRAFANA_PORT=3000
 NIM_PORT=19000
+TEKU_PORT=9000
+# Local grafana dashboard port. Do not expose to Internet, it is insecure http
+GRAFANA_PORT=3000
 
 # These variables are not likely to require adjustment
 GETH_BUILD_TARGET=release/1.9
@@ -49,8 +53,9 @@ PRYSM_VAL_IMPORT_ENTRYPOINT=create-prysm-validator-wallet.sh
 
 NIM_BUILD_TARGET=devel
 NIM_USER=nimbus
-NIM_ENTRYPOINT=["/usr/local/bin/beacon_node", "--data-dir=/var/lib/nimbus", "--non-interactive", "--log-file=/var/lib/nimbus/beacon_node.log"]
-NIM_IMPORT_ENTRYPOINT=["/usr/local/bin/beacon_node", "deposits", "import", "--data-dir=/var/lib/nimbus", "--log-file=/var/lib/nimbus/beacon_node.log", "/var/lib/nimbus/validator_keys"]
+
+TEKU_BUILD_TARGET=master
+TEKU_USER=teku
 
 DEPCLI_BUILD_TARGET=master
 DEPCLI_USER=depcli
