geth archive mode for Nimbus

--- a/default.env
+++ b/default.env
@@ -4,6 +4,8 @@ LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
 COMPOSE_FILE=lh-base.yml:geth.yml:grafana.yml
 # ETH1 endpoint / chain source. This default uses the geth container
+# For Nimbus with geth, use ws://geth:8546, and the geth-archive.yml file
+# in COMPOSE_FILE
 ETH1_NODE=http://geth:8545
 # Graffiti to use for validator, in order to receive POAP
 GRAFFITI=eth2-docker
@@ -33,6 +35,10 @@ NIM_PORT=19000
 TEKU_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
+# Local geth http port if you are using geth-shared.yml. Do not expose to Internet, it is insecure http
+GETH_HTTP_PORT=8545 
+# Local geth ws port if you are using geth-archived-shared.yml. Do not expose to Internet, it is insecure
+GETH_WS_PORT=8546
 
 # These variables are not likely to require adjustment
 GETH_BUILD_TARGET=release/1.9
